# classtrees

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: blank.yml  work.yml
src/classtrees/: __init__.py  assert.h  checks.c  checks.h  forest.py  funs.py  random.h  randomforest.c  randomforest.h  rf_run.py  rf_run_sizes.py  run.py  run_sizes.py  tree.c  tree.h  tree_module.c
tests/: test_edge_cases.py  test_errors.py  test_fit.py  test_init.py  test_integration.py  test_predict.py  test_predict_proba.py  test_tree.py
tests/rf_tests/: test_edge_cases_rf.py  test_end_to_end_rf.py  test_fit_rf.py  test_init_rf.py  test_predict_proba_rf.py  test_predict_rf.py  test_seed_rf.py
tests/tree_tests/: test_edge_cases.py  test_end_to_end.py  test_fit.py  test_init.py  test_predict.py  test_predict_proba.py  test_seed.py
